--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   font-size: 16px;
+  background: #ffffff;
 }
 *,
 *::before,
@@ -19,10 +20,6 @@ video {
   padding: 0;
   font: inherited;
 }
-
-/* html {
-  color-scheme: dark light;
-} */
 
 body {
   min-height: 100svh;
