--- a/style.css
+++ b/style.css
@@ -30,12 +30,13 @@ body {
 .background {
   position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: 0;
 }
 .backgroundImage {
   width: 100%;
   height: 100svh;
   object-fit: cover;
+  z-index: 0;
 }
 
 .container {
@@ -43,8 +44,12 @@ body {
   width: 100%;
   display: grid;
   place-content: center;
+  z-index: 5;
 }
 
+.container * {
+  z-index: 5;
+}
 input {
   min-width: 250px;
 }
